--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-base64 = "0.13.1"
+base64 = "0.20.0"
 hex = "0.4.3"
+openssl = "0.10"
+openssl-sys = "0.9"
